--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="background-color: rgb(199, 241, 235);">
     <div class=" body">
 
-        <h3>Chess 1.0</h3>
+        <h3>Chess 1.0 ( only works with drag N drop)</h3>
         <button class=" btn" id="btn">New Game</button>
     </div>
     <div class="body">
