--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="./Img/W_king.png">
 </head>
 
-<body style="background-color: rgb(241, 237, 199);">
+<body style="background-color: rgb(217 217 245);">
     <div class=" body">
 
         <h3>Chess 1.0 ( only works with drag N drop)</h3>
