Responsive and warning

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 
 <body style="background-color: rgb(217 217 245);">
-    <div class=" body">
+    <div class="body">
 
         <h3>Chess 1.2.0 </h3>
         <button class=" btn" id="btn">New Game</button>
+        <h4 style="color: red; display: none;" id="popup">Illegal Move !!!</h4>
     </div>
-    <div class="body">
+    <div class="body  body2">
         <div class="menu">
         </div>
         <div class="board" id="board"></div>
     </div>
 
-    <div class=" body">
+    <div class="body">
 
         <h4>Thank you !! Feel free to send any  bugs to <a target="_blank" href="https://github.com/Rudra7781"> Me </a></h4>
         <!-- <h3>Rudra Patel</h3> -->
