--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 
 <body style="background-color: rgb(217 217 245);">
-    <div class="body">
-
+    <div class="head">
         <h3>Chess 1.2.1 </h3>
         <button class=" btn" id="btn">New Game</button>
-        <h4 style="color: red; display: none;" id="popup">Illegal Move !!!</h4>
+        <h4 style="color: red; display: none; " id="popup">Illegal Move !!!</h4>
     </div>
     <div class="body  body2">
         <div class="menu">
