--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,9 +12,9 @@
 
 <body style="background-color: rgb(217 217 245);">
     <div class="head">
-        <h3>Chess 1.2.2 </h3>
+        <h3>Chess 1.3.0 </h3>
         <button class=" btn" id="btn">New Game</button>
-        <h4 style="color: red; display: none; " id="popup">Illegal Move !!!</h4>
+        <!-- <h4 style="color: red; display: none; " id="popup">Illegal Move !!!</h4> -->
     </div>
     <div class="body  body2">
         <div class="menu">
@@ -23,14 +24,14 @@
 
     <div class="body">
 
-        <h4>Thank you !! Feel free to send any  bugs to <a target="_blank" href="https://github.com/Rudra7781"> Me </a></h4>
+        <h4>Thank you !! Feel free to send any bugs to <a target="_blank" href="https://github.com/Rudra7781"> Me </a>
+        </h4>
         <!-- <h3>Rudra Patel</h3> -->
         <!-- <button class=" btn" id="btn">New Game</button> -->
     </div>
-    
- 
+
+
 </body>
 <script type="module" src="./app.js"></script>
+
 </html>
-
-
