--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
     <div class="head">
         <h3>Chess 1.3.5 </h3>
         <button class=" btn" id="btn">New Game</button>
+        <p id="check"> Your King is in Check ! </p>
         <!-- <h4 style="color: red; display: none; " id="popup">Illegal Move !!!</h4> -->
     </div>
     <div class="body  body2">
+        <div id="notification">
+            <div id="msg"></div>
+            <button class="btn" id="btn2">New Game</button>
+        </div>
         <div class="menu">
         </div>
         <div class="board" id="board"></div>
